# Personal_AI_Assistant

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: main.py
app/api/: chat.py  daily_summary.py  future_me.py  health.py  memory.py  reminders.py  study.py
app/bot/: api_client.py  auth.py  formatters.py  keyboards.py  state.py  telegram_polling.py
app/bot/handlers/: chat.py  core.py  daily_summary.py  future_me.py  memory.py  menu.py  reminders.py  study.py
app/core/: config.py  database.py
app/models/: chat_message.py  daily_summary.py  future_me.py  personal_memory.py  reminder.py  study.py  user.py
app/services/: chat_history_service.py  daily_summary_service.py  embedding_service.py  future_me_service.py  llm_client.py  memory_service.py  reminder_service.py  study_service.py  user_service.py
docs/: SDD.docx
