[project]
name = "personal-ai-assistant"
version = "0.1.0"
description = "Telegram-based multi-user AI personal assistant MVP"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic-settings>=2.5.0",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",
    "python-dotenv>=1.0.1",
    "litellm>=1.50.0",
    "apscheduler>=3.10.4",
    "python-telegram-bot>=21.0",
    "sentence-transformers>=3.0.0",
    "pgvector>=0.3.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"